Adding some test content types and testing facets

--- a/config/sync/context.context.binary.yml
+++ b/config/sync/context.context.binary.yml
@@ -18,7 +18,7 @@ disabled: false
 conditions:
   node_has_term:
     id: node_has_term
-    negate: 0
+    negate: false
     tids:
       -
         target_id: '5'
