--- a/config/sync/views.view.solr_search_content.yml
+++ b/config/sync/views.view.solr_search_content.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block.block.semester
     - search_api.index.default_solr_index
   module:
     - search_api
@@ -169,7 +170,20 @@ display:
           empty: false
           content: 'Displaying results @start - @end of @total'
           plugin_id: result
-      footer: {  }
+      footer:
+        entity_block:
+          id: entity_block
+          table: views
+          field: entity_block
+          relationship: none
+          group_type: group
+          admin_label: 'Rendered Entity - Semester'
+          empty: true
+          tokenize: true
+          target: semester
+          view_mode: default
+          bypass_access: false
+          plugin_id: entity
       empty: {  }
       relationships: {  }
       arguments: {  }
