--- a/config/sync/context.context.open_seadragon.yml
+++ b/config/sync/context.context.open_seadragon.yml
@@ -15,7 +15,7 @@ disabled: false
 conditions:
   node_has_term:
     id: node_has_term
-    negate: 0
+    negate: false
     tids:
       -
         target_id: '35'
