--- a/config/sync/field.storage.node.field_display_hints.yml
+++ b/config/sync/field.storage.node.field_display_hints.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: pglYEVz6P3kvbXRp6ZYAF_BKz3cXdP-WXbAkrjIkPjs
 id: node.field_display_hints
