--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/admin_toolbar": "^1.27",
+        "drupal/admin_toolbar": "^3.0",
         "drupal/auto_entitylabel": "2.1.0-beta1",
         "drupal/bootstrap": "^3.19",
         "drupal/content_browser": "^1.0@alpha",
         "drupal/core": "^8.9",
         "drupal/core-composer-scaffold": "^8.9",
         "drupal/devel": "^2.0",
-        "drupal/facets": "^1.3",
+        "drupal/facets": "1.6",
         "drupal/libraries": "^3.0@alpha",
         "drupal/matomo": "^1.7",
         "drupal/name": "^1.0@RC",
