--- a/config/sync/views.view.solr_search_content.yml
+++ b/config/sync/views.view.solr_search_content.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block.block.semester
     - search_api.index.default_solr_index
+    - taxonomy.vocabulary.semester
   module:
     - search_api
 _core:
@@ -81,6 +81,7 @@ display:
           operator: or
           value:
             islandora_object: islandora_object
+            teacher_training: teacher_training
           group: 1
           exposed: false
           expose:
@@ -89,6 +90,8 @@ display:
             description: ''
             use_operator: false
             operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
             identifier: ''
             required: false
             remember: false
@@ -96,8 +99,6 @@ display:
             remember_roles:
               authenticated: authenticated
             reduce: false
-            operator_limit_selection: false
-            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -157,6 +158,54 @@ display:
           min_length: null
           fields: {  }
           plugin_id: search_api_fulltext
+        field_semester:
+          id: field_semester
+          table: search_api_index_default_solr_index
+          field: field_semester
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_semester_op
+            label: Semester
+            description: ''
+            use_operator: false
+            operator: field_semester_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: semester
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              fedoraadmin: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: semester
+          hierarchy: false
+          error_message: true
+          plugin_id: search_api_term
       sorts: {  }
       title: 'Search Content'
       header:
@@ -170,20 +219,7 @@ display:
           empty: false
           content: 'Displaying results @start - @end of @total'
           plugin_id: result
-      footer:
-        entity_block:
-          id: entity_block
-          table: views
-          field: entity_block
-          relationship: none
-          group_type: group
-          admin_label: 'Rendered Entity - Semester'
-          empty: true
-          tokenize: true
-          target: semester
-          view_mode: default
-          bypass_access: false
-          plugin_id: entity
+      footer: {  }
       empty: {  }
       relationships: {  }
       arguments: {  }
@@ -197,6 +233,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       cacheable: false
       max-age: -1
       tags: {  }
@@ -227,6 +264,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       cacheable: false
       max-age: -1
       tags: {  }
