--- a/config/sync/core.entity_form_display.node.islandora_object.default.yml
+++ b/config/sync/core.entity_form_display.node.islandora_object.default.yml
@@ -58,7 +58,6 @@ third_party_settings:
         - field_access_terms
         - field_display_hints
         - field_pid
-        - field_weight
       parent_name: ''
       weight: 1
       format_type: details
@@ -120,7 +119,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -407,13 +406,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_weight:
-    weight: 15
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: number
-    region: content
   langcode:
     type: language_select
     weight: 10
@@ -429,7 +421,7 @@ content:
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 6
+    weight: 5
     region: content
     settings:
       display_label: true
@@ -438,12 +430,12 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 4
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 9
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -463,7 +455,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
@@ -471,4 +463,5 @@ content:
       placeholder: ''
       match_limit: 10
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_weight: true
